# aiCompare

./: .gitignore  build.gradle.kts  readme.md  readme.zh.md  settings.gradle.kts
Documents/: architecture_design.md  codebase_explanation.md  fuzzy_matching_rules.md  git_integration_guide.md  install.md  large_file_optimization_guide.md  release_setup.md  rust_integration_guide.md  wasm_plugin_architecture.md
gradle/wrapper/: gradle-wrapper.properties
rust_core/: Cargo.toml
rust_core/src/: common.rs  diff.rs  folder.rs  lib.rs  merge.rs  vfs.rs
src/main/kotlin/: AppUI.kt  DiffUiComponents.kt  DiffViewModel.kt  FolderUiComponents.kt  FolderViewModel.kt  Main.kt  MergeUiComponents.kt  MergeViewModel.kt  Models.kt  WorkspaceViewModel.kt
src/main/kotlin/bindings/uniffi/compare_core/: compare_core.kt
test_data/: local.txt  remote.txt
test_data/file_compare/: article_new.md  article_old.md  data_processor_new.py  data_processor_old.py  lib_new.rs  lib_old.rs  sales_data_new.csv  sales_data_old.csv  unimportant_new.kt  unimportant_old.kt  user_viewModel_new.kt  user_viewModel_old.kt  utils_new.js  utils_old.js
test_data/folder_compare/left/: large_code.c  left_only.txt  modified.txt  unchanged.txt
test_data/folder_compare/left/docs/: readme.md
test_data/folder_compare/right/: large_code.c  modified.txt  right_only.txt
test_data/folder_compare/right/docs/: new_guide.md  readme.md
